@@ -9,6 +9,10 @@ debhelper (11.1) UNRELEASED; urgency=medium
   [ Hideki Yamane ]
   * Fix typo of unnecessary.  (Closes: #884574)
 
+  [ Niels Thykier ]
+  * dh_missing: Support wildcards in debian/not-installed.  Thanks
+    to Maximiliano Curia for the suggestion.  (Closes: #884556)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
 debhelper (11) unstable; urgency=medium
